--- a/templates/1.html
+++ b/templates/1.html
@@ -199,13 +199,13 @@
         </div>
     </div>
 </div>
-    <div class="recommendations">
-        {% for recommendation in recommendations %}
-            <div class="recommendation">
-                {{ recommendation|safe }}
-            </div>
-        {% endfor %}
-    </div>
+<div class="recommendations">
+    {% for index, recommendation in enumerate(recommendations) %}
+        <p>recommendation:{{ index + 1 }}</p>
+        <p>{{ recommendation }}</p>
+        <br>
+    {% endfor %}
+</div>
 <button id="refresh-button">Refresh</button>
 <script>
     document.getElementById('refresh-button').addEventListener('click', function() {
