--- a/templates/1.html
+++ b/templates/1.html
@@ -200,8 +200,8 @@
     </div>
 </div>
 <div class="recommendations">
-    {% for idx,recommendation in recommendations %}
-    <p>{{ "Recommendation " ~ (idx+1) }}: {{ recommendation }}</p>    
+    {% recommendation in recommendations %}
+    <p>{{ recommendation }}</p>    
     {% endfor %}
 </div>
 <button id="refresh-button">Refresh</button>
