--- a/templates/1.html
+++ b/templates/1.html
@@ -200,10 +200,13 @@
     </div>
 </div>
 <div class="recommendations">
-    {% recommendation in recommendations %}
-    <p>{{ recommendation }}</p>    
+    {% for recommendation in recommendations %}
+        <div class="recommendation">
+            {{ recommendation|safe }}
+        </div>
     {% endfor %}
 </div>
+
 <button id="refresh-button">Refresh</button>
 <script>
     document.getElementById('refresh-button').addEventListener('click', function() {
